--- a/src/02-video.html
+++ b/src/02-video.html
@@ -21,5 +21,5 @@
     ></iframe>
 
     <script src="js/02-video.js" type="module"></script>
-  </body>
+    <script src="https://player.vimeo.com/api/player.js"></script>
 </html>
